Bring back RecorderMojo, close gatling/gatling#2666